--- a/Education.html
+++ b/Education.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<Education.html>
 <html lang="en">
 <head>
   <title>My personal homepage</title>
@@ -13,7 +13,7 @@
   <h2>This is Nuttapong Kamkhiew homepage</h2><br>
   <ul class="nav nav-tabs">
     <li class="nav-item">
-      <a class="nav-link active" href="#">Personal Info</a>
+      <a class="nav-link active" href="index.html">Personal Info</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="Education.html">Education</a>
@@ -34,33 +34,14 @@
     <tbody>
       <tr>
 		<td rowspan="7"><img src="images/alan.png" class="rounded mx-auto d-block" alt="Alan McDonald" width="200" height="356"></td>
-        <th>Name:</th>
-        <td>Nuttapong</td>
+        <th>Primary education:</th>
+        <td>Bangbowitthayakhom Shool</td>
       </tr>
       <tr>
-        <th>Surname:</th>
-        <td>Kamkhiew</td>
+        <th>Secondary education:</th>
+        <td>Bangbowitthayakhom Shool</td>
       </tr>
-	  <tr>
-        <th>Age:</th>
-        <td>21</td>
-      </tr>
-	  <tr>
-        <th>Birthday:</th>
-        <td>11 September 2003</td>
-      </tr>
-	  <tr>
-        <th>Nationality:</th>
-        <td>Thai</td>
-      </tr>
-	  <tr>
-        <th>Current Address:</th>
-        <td>149/230 Bang Phriang  Bang Bo Samut Prakan 10560</td>
-      </tr>
-	  <tr>
-        <th>Email Address:</th>
-        <td>bookza253@gmail.com</td>
-      </tr>
+	  
     </tbody>
   </table>
 </div>
